[gd_scene load_steps=27 format=3 uid="uid://di1mdgce3k6nr"]

[ext_resource type="Script" path="res://World/Objects/Nature/Trees/Stump.gd" id="1_skvyr"]
[ext_resource type="Texture2D" uid="uid://cypqpo1oyy45y" path="res://Assets/Images/tree_sets/oak/stump.png" id="2_huia6"]
[ext_resource type="Texture2D" uid="uid://com844px0fqvi" path="res://Assets/Images/tree_sets/oak/large stump.png" id="3_dlsgp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uksyw"]
atlas = ExtResource("2_huia6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tvrr"]
atlas = ExtResource("2_huia6")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf0v1"]
atlas = ExtResource("2_huia6")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8iso"]
atlas = ExtResource("2_huia6")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkkpd"]
atlas = ExtResource("2_huia6")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6obp0"]
atlas = ExtResource("2_huia6")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7b3h"]
atlas = ExtResource("2_huia6")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4x3u"]
atlas = ExtResource("2_huia6")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxijm"]
atlas = ExtResource("2_huia6")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_631y8"]
atlas = ExtResource("2_huia6")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko6jc"]
atlas = ExtResource("2_huia6")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nd73"]
atlas = ExtResource("2_huia6")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mkek"]
atlas = ExtResource("2_huia6")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdnl7"]
atlas = ExtResource("2_huia6")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi0ip"]
atlas = ExtResource("2_huia6")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3inh"]
atlas = ExtResource("2_huia6")
region = Rect2(384, 384, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_sjf2u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uksyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tvrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf0v1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8iso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkkpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6obp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7b3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4x3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxijm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_631y8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko6jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nd73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mkek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdnl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi0ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3inh")
}],
"loop": false,
"name": &"break",
"speed": 20.0
}]

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprites/TreeStump:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TreeSprites/TreeStump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TreeSprites/TreeStump:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MovementCollisionBox/movementCollisionBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StumpHurtbox/treeHurtBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TreeSprites/Break:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="3"]
resource_name = "stump destroyed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprites/TreeStump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TreeSprites/TreeStump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MovementCollisionBox/movementCollisionBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StumpHurtbox/treeHurtBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TreeSprites/Break:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="4"]
resource_name = "stump hit right"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprites/TreeStump:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.25, 0.4, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-3, 0), Vector2(2, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oq387"]
_data = {
"RESET": SubResource("2"),
"stump destroyed": SubResource("3"),
"stump hit right": SubResource("4")
}

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(44, 44)

[sub_resource type="CircleShape2D" id="6"]
radius = 16.0

[node name="Stump" type="Node2D"]
script = ExtResource("1_skvyr")

[node name="TreeSprites" type="Node2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(1.3, 1.3)

[node name="Break" type="AnimatedSprite2D" parent="TreeSprites"]
visible = false
position = Vector2(-6, 3)
sprite_frames = SubResource("SpriteFrames_sjf2u")
animation = &"break"

[node name="TreeStump" type="Sprite2D" parent="TreeSprites"]
texture = ExtResource("3_dlsgp")
offset = Vector2(0, -30)

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
volume_db = -12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oq387")
}

[node name="StumpHurtbox" type="Area2D" parent="."]
visible = false
position = Vector2(0, 6)
collision_layer = 0
collision_mask = 262152

[node name="treeHurtBox" type="CollisionShape2D" parent="StumpHurtbox"]
shape = SubResource("5")

[node name="MovementCollisionBox" type="StaticBody2D" parent="."]
visible = false
position = Vector2(0, 6)
collision_layer = 35

[node name="movementCollisionBox" type="CollisionShape2D" parent="MovementCollisionBox"]
rotation = -1.5708
shape = SubResource("6")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(1.13687e-13, -15)
scale = Vector2(4.11111, 5.5)

[connection signal="area_entered" from="StumpHurtbox" to="." method="_on_StumpHurtbox_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
